# dialogs

./: .gitignore  pyproject.toml  readme.MD
.github/workflows/: run-actions.yml
dialogs/: __init__.py
dialogs/dialogs/: dialog_state.py  dialogs.py  types.py
dialogs/tests/: test_dialog_state.py  test_dialogs.py  test_message_queue.py
dialogs/tests/persistence/: test_in_memory.py
dialogs_framework/: __init__.py  async_gen_dialogs.py  dialog_state.py  dialogs.py  fallback_dialog.py  gen_dialogs.py  generic_types.py  message_queue.py  types.py
dialogs_framework/persistence/: in_memory.py  persistence.py
examples/dragons/: chat_server.py  primitives.py
examples/dragons_gen/: chat_example.py  chat_server.py  primitives.py
examples/guessbot/local/: local.py
examples/guessbot/server/: client.py  client_async.py  server.py  server_adf.py  server_df.py
tests/: test_async_gen_dialogs.py  test_dialog_state.py  test_dialogs.py  test_gen_dialogs.py  test_message_queue.py
tests/persistence/: test_in_memory.py
