[tool.black]
line-length = 100

[tool.poetry]
name = "pycon"
version = "0.1.0"
description = ""
authors = ["Alon <alon.gal@khealth.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
requests = "^2.25.1"
gevent = "^21.1.2"
pytest = "^6.2.3"
mypy = "^0.812"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
