[tool.black]
line-length = 100

[tool.poetry]
name = "dialogs_framework"
version = "0.1.1"
description = ""
authors = ["Alon <alon.gal@khealth.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gevent = "^21.1.2"

[tool.poetry.dev-dependencies]
fastapi = "^0.63.0"
requests = "^2.25.1"
uvicorn = "^0.13.4"
pytest = "^6.2.3"
mypy = "^0.812"
pylint = "^2.7.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
